updated version with support for all three (known) projects

--- a/GeographPhotos-example.islands.html
+++ b/GeographPhotos-example.islands.html
@@ -53,7 +53,7 @@
 
 	///////////////////////////////////////////////
 
-	var gph = L.geographPhotos({api_key:'geograph_demo', autoZoomOnAdd: true, query:'canal'});
+	var gph = L.geographPhotos({project:'islands', api_key:'geograph_demo', autoZoomOnAdd: true, query:''});
 	gph.addTo(map);
 
 	</script>
